# duckdb-odbc

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakeLists.txt.in  Makefile  README.md  duckdb_odbc.def  duckdb_odbc.exp  duckdb_odbc.map  duckdb_odbc.rc.in
.github/actions/ubuntu_18_setup/: action.yml
.github/workflows/: CodeQuality.yml  MirrorInternally.yml  ODBC.yml  OnTag.yml  StagedUpload.yml  Vendor.yml
include/: api_info.hpp  connect.hpp  descriptor.hpp  duckdb_odbc.hpp  file_io.hpp  odbc_utils.hpp  session_init.hpp  statement_functions.hpp  widechar.hpp
local/: format_commit_and_push.sh  sync_main.sh
scripts/: asset-upload-gha.py  create_ini_reg.py  delete_ini_reg.py  format.py  install_unixodbc.sh  upload-assets-to-staging.sh
src/: CMakeLists.txt  api_info.cpp  cursor.cpp  descriptor.cpp  driver.cpp  empty_stubs.cpp  parameter_descriptor.cpp  prepared.cpp
src/common/: CMakeLists.txt  duckdb_odbc.cpp  file_io.cpp  handle_functions.cpp  odbc_fetch.cpp  odbc_utils.cpp  widechar.cpp
src/connect/: CMakeLists.txt  connect.cpp  connection.cpp  driver_connect.cpp  session_init.cpp
src/duckdb/: .clang-tidy
src/duckdb/src/function/table/version/: pragma_version.cpp
src/odbc_api/: CMakeLists.txt  attribute_api.cpp  binding_api.cpp  column_info_api.cpp  connection_api.cpp  cursor_api.cpp  descriptor_api.cpp  diagnostic_api.cpp  empty_api_stubs.cpp  handle_api.cpp  info_api.cpp  metadata_api.cpp  parameter_api.cpp  result_api.cpp  statement_api.cpp  transaction_api.cpp
src/odbc_driver/: CMakeLists.txt  api_info.cpp  driver.cpp  row_descriptor.cpp
src/odbc_driver/common/: CMakeLists.txt  odbc_diagnostic.cpp  odbc_interval.cpp  odbc_utils.cpp
src/odbc_driver/connect/: CMakeLists.txt
src/odbc_driver/statement/: CMakeLists.txt
src/odbc_driver/widechar/: widechar.cpp  widechar_utf16.hpp
src/statement/: CMakeLists.txt  statement.cpp  statement_functions.cpp
src/widechar/: CMakeLists.txt  widechar.cpp
test/: CMakeLists.txt  common.cpp  connect_helpers.cpp  isql-test.py  julia-test.jl  pyodbc-test.py  rodbc.R  run_isql_tests.sh  run_nanodbc_tests.sh  run_pyodbc_tests.sh  temp_directory.cpp
test/include/: catch.hpp  connect_helpers.h  odbc_test_common.h  temp_directory.hpp
test/tests/: alter.cpp  basic_usage.cpp  bind_col.cpp  bools_as_char.cpp  catalog_functions.cpp  connect.cpp  connect_with_ini.cpp  cte.cpp  cursor_commit.cpp  data_execution.cpp  declare_fetch_block.cpp  diagnostics.cpp  extension.cpp  multicolumn_param_bind.cpp  numeric.cpp  power_bi_failing.cpp  quotes.cpp  result_conversion.cpp  row_wise_fetching.cpp  select.cpp  set_attr.cpp  test_allowed_paths.cpp  test_connect.cpp  test_empty_stubs.cpp  test_long_data.cpp  test_num_result_cols.cpp  test_select.cpp  test_session_init.cpp  test_sqlgetinfo_truncation.cpp  test_stubs.cpp  test_timestamp.cpp  test_truncation.cpp  test_unbound_params.cpp  test_widechar.cpp  test_widechar_conv.cpp  test_widechar_data.cpp
test/tests/col_attribute/: char_query.cpp  col_attribute.cpp  decimal_query.cpp  int_query.cpp  interval_query.cpp  temporal_query.cpp  unsigned_int_query.cpp  utils.cpp  utils.h  uuid_query.cpp
test/tests/dotnet/: CMakeLists.txt
test/tests/dotnet-linux/: Program.cs  README.md  dotnet.csproj
winsetup/: install.c
